--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,4 +2,6 @@ services:
   server:
     image: ghcr.io/abhijit4-debug/my_federation:latest
     command: fx aggregator start
-    
+    ports:
+      - "5000:5000"  # Expose the port your server listens on
+  
