--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   server:
-    image: ghcr.io/abhijit4-debug/aggregator:modified1.6
+    image: ghcr.io/abhijit4-debug/my_federation:latest
     command: fx aggregator start
     ports:
       - "5000:5000"
-    working_dir:  /workspace
+    # working_dir:  /workspace
