--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,8 @@
 services:
   server:
+    # image: ghcr.io/abhijit4-debug/my_federation:modified
     image: ghcr.io/abhijit4-debug/server:1.9
     command: fx aggregator start
     ports:
       - "5000:5000"
-    working_dir: /workspace
-    volumes:
-      - ./save:/workspace/save
+    working_dir:  /workspace
