--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   server:
     # image: ghcr.io/abhijit4-debug/my_federation:modified
-    image: ghcr.io/abhijit4-debug/server:1.9
+    image: ghcr.io/abhijit4-debug/server:modified1.9
     command: fx aggregator start
     ports:
       - "5000:5000"
