--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,4 +6,6 @@ services:
     command: fx aggregator start
     ports:
       - "5000:5000"
-    working_dir:  /workspace
+    working_dir: /workspace
+    user: root  
+
